
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
double recursive(double a) {
    if (a < 10) return a;
    return recursive(3.33);
}
