; ModuleID = '/home/carl/AnghaBench/8cc/test/extr_float.c_recursive.c'
source_filename = "/home/carl/AnghaBench/8cc/test/extr_float.c_recursive.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local double @recursive(double %0) #0 {
  %2 = alloca double, align 8
  %3 = alloca double, align 8
  store double %0, double* %3, align 8
  %4 = load double, double* %3, align 8
  %5 = fcmp olt double %4, 1.000000e+01
  br i1 %5, label %6, label %8

6:                                                ; preds = %1
  %7 = load double, double* %3, align 8
  store double %7, double* %2, align 8
  br label %10

8:                                                ; preds = %1
  %9 = call double @recursive(double 3.330000e+00)
  store double %9, double* %2, align 8
  br label %10

10:                                               ; preds = %8, %6
  %11 = load double, double* %2, align 8
  ret double %11
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
